@@ -28,7 +28,7 @@ ACE_TMAIN (int, ACE_TCHAR*[])
       counter.receive (0.0);
       counter.receive (0.0);
 
-      if (counter.last_sample() != 3)
+      if (!ACE::is_equal (counter.last_sample(), 3.0))
         {
           error ("Counter Monitor_Control::receive() failed");
         }
@@ -41,22 +41,22 @@ ACE_TMAIN (int, ACE_TCHAR*[])
       size = 42;
       number.receive (size);
 
-      if (number.average () != 20)
+      if (!ACE::is_equal (number.average (), 20.0))
         {
           error ("Number Monitor_Base::average() failed");
         }
 
-      if (number.minimum_sample () != 8)
+      if (!ACE::is_equal (number.minimum_sample (), 8.0))
         {
           error ("Number Monitor_Base::minimum_sample() failed");
         }
 
-      if (number.maximum_sample () != 42)
+      if (!ACE::is_equal (number.maximum_sample (), 42.0))
         {
           error ("Number Monitor_Base::maximum_sample() failed");
         }
 
-      if (number.sum_of_squares () != 1928)
+      if (!ACE::is_equal (number.sum_of_squares (), 1928.0))
         {
           error ("Number Monitor_Base::sum_of_squares() failed");
         }
@@ -66,17 +66,17 @@ ACE_TMAIN (int, ACE_TCHAR*[])
       stime.receive (1183466377.9922);
       stime.receive (1083466309.88374);
 
-      if (stime.average () != 1150132998.96276)
+      if (!ACE::is_equal (stime.average (), 1150132998.96276))
         {
           error ("Time Monitor_Base::average() failed");
         }
 
-      if (stime.minimum_sample () != 1083466309.88374)
+      if (!ACE::is_equal (stime.minimum_sample (), 1083466309.88374))
         {
           error ("Time Monitor_Base::minimum_sample() failed");
         }
 
-      if (stime.maximum_sample () != 1183466377.9922)
+      if (!ACE::is_equal (stime.maximum_sample (), 1183466377.9922))
         {
           error ("Time Monitor_Base::maximum_sample() failed");
         }
@@ -94,12 +94,12 @@ ACE_TMAIN (int, ACE_TCHAR*[])
           error ("Interval Monitor_Base::average() failed");
         }
 
-      if (interval.minimum_sample () != .1)
+      if (!ACE::is_equal (interval.minimum_sample (), 0.1))
         {
           error ("Interval Monitor_Base::minimum_sample() failed");
         }
 
-      if (interval.maximum_sample () != .8)
+      if (!ACE::is_equal (interval.maximum_sample (), 0.8))
         {
           error ("Interval Monitor_Base::maximum_sample() failed");
         }
