@@ -1,3 +1,9 @@
+Wed Jan 12 13:20:09 UTC 2011  Olli Savia  <ops@iki.fi>
+
+        * orbsvcs/tests/Notify/MC/test_monitor.cpp:
+        * orbsvcs/tests/unit/Notify/MC/Statistic/Statistic.cpp:
+          Use ACE::is_equal() to compare floating point values.
+
 Wed Jan 12 13:00:13 UTC 2011  Olli Savia  <ops@iki.fi>
 
         * tests/Param_Test/bd_struct_seq.cpp:
